<resources>
    <string name="app_name">DroidBountyHunterKotlin</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="titulo_capturados">Capturados</string>
    <string name="titulo_fugitivos">Fugitivos</string>
    <string name="titulo_acerca_de">Acerca de…</string>
    <string name="menu_agregar">Agregar</string>
    <string name="menu_editar">Editar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_capturar">Capturar</string>
    <string name="campo_nombre">Nombre del Fugitivo</string>
    <string name="etiqueta_desarrollo">Desarrollado por:</string>
    <string name="nombre_desarrollador">Rodrigo Reyes</string>
    <string name="etiqueta_empresa">SRK CHH.</string>
    <string name="etiqueta_mensaje">Fugitivo suelto</string>
    <string name="titulo_activity_agregar">Nuevo fugitivo</string>
    <string name="titulo_activity_detalle">Detalle Fugitivo</string>
    <string name="boton_foto">Tomar foto</string>
    <string name="boton_mapa">Ver Mapa</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_capturar">Capturar</string>
    <string name="menu_tomar_foto">Tomar Foto</string>
    <string name="menu_mapa">Ver mapa</string>
    <string name="google_maps_key">AIzaSyA9z4ghTUUdvTN8IR1NR6NVlFP_Pl_xeLs</string>


</resources>
