<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menuDetalleEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_delete_red_24"
            android:title="@string/menu_eliminar"
            android:orderInCategory="100"
            app:showAsAction="always" />
    <item
            android:id="@+id/menuDetalleCapturar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_capturar_white_24"
            android:title="@string/menu_agregar"
            android:orderInCategory="200"
            app:showAsAction="always" />
    <item
            android:id="@+id/menuDetalleFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_camera_white_24"
            android:title="@string/menu_tomar_foto"
            android:orderInCategory="300"
            app:showAsAction="always" />
    <item
            android:id="@+id/menuDetalleMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_maps_white_24"
            android:title="@string/menu_mapa"
            android:orderInCategory="400"
            app:showAsAction="always" />
</menu>