<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:id="@+id/etiquetaMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta_mensaje"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

    <ImageView
            android:id="@+id/pictureFugitivo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/etiquetaMensaje"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_no_photo_black_24"
            tools:srcCompat="@tools:sample/avatars"></ImageView>

    <Button
            android:id="@+id/botonCapturar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pictureFugitivo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:minWidth="100dp"
            android:minHeight="30dp"
            android:onClick="capturarFugitivoPresionado"
            android:text="@string/boton_capturar"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:visibility="invisible" />

    <Button
            android:id="@+id/botonEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/botonCapturar"
            android:layout_centerHorizontal="true"
            android:minWidth="100dp"
            android:minHeight="30dp"
            android:onClick="eliminarFugitivoPresionado"
            android:text="@string/boton_eliminar"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:visibility="invisible" />

    <Button
            android:id="@+id/botonTomarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/botonEliminar"
            android:layout_centerHorizontal="true"
            android:onClick="OnFotoClick"
            android:text="@string/boton_foto"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:visibility="invisible" />

    <Button
            android:id="@+id/botonMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/botonTomarFoto"
            android:layout_centerHorizontal="true"
            android:text="@string/boton_mapa"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:visibility="invisible" />

</RelativeLayout>
